# one-word-story

./: .replit  README.md  app.py  pyproject.toml  requirements.txt  start.sh
static/: styles.css
templates/: index.html  story.html  view_story.html
